Float logos right instead of left to prevent weird wrapping

--- a/packages/marko-web-theme-default/scss/components/_page-image.scss
+++ b/packages/marko-web-theme-default/scss/components/_page-image.scss
@@ -29,7 +29,7 @@
   }
 
   &--primary-image-inline {
-    float: left;
+    float: right;
     margin-top: calc((#{$theme-page-body-line-height} - 1) * .5em);
     margin-bottom: 0;
     margin-left: .75rem;
